[package]

name = "cql"
version = "0.0.2"
authors = ["Annie Lai <ng8eke@163.com>"]
description = "Apache Cassandra client library"

homepage = "https://github.com/ng8eke/rql"
repository = "https://github.com/ng8eke/rql"
keywords = ["cql", "cassandra"]

license = "MIT"

[dependencies]
num = "0.1"
byteorder = "1.2"

[profile.bench]
debug = true
